fix formating on later slides

--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -339,6 +339,9 @@ plots[["Posterior Probability"]] +
 ```
 
 ---
+class: center, middle
+layout: true
+---
 
 .large[**Preregistrations**] reduce .large[**uncertainty**] about .large[**theoretical risk**].
 
