--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -1,6 +1,5 @@
 ---
-title: "Why does preregistration increase the persuasiveness of evidence?"
-subtitle: "A Bayesian rationalization"
+title: "The Ideal of Preregistration and what warrants it"
 author: 
   - "Aaron Peikert"
 date: '`r Sys.Date()`'
@@ -54,12 +53,15 @@ style_duo(
   header_font_google = google_font("Didact Gothic", "400", "400i"),
   text_font_google   = google_font("IBM Plex Sans", "400", "400i"),
   text_font_size = "1.5rem",
+  extra_fonts = list(google_font("Parisienne", "400", "400i"))
   )
 
 style_extra_css(css = list(".todo" = list(color = "#17C25B"),
                            ".optional" = list(color = "#05BCE6"),
                            ".large" = list(`font-size` = "130%"),
+                           ".huge" = list(`font-size` = "200%"),
                            ".small" = list(`font-size` = "80%"),
+                           ".tiny" = list(`font-size` = "50%"),
                            ".enormous" = list(`font-size` = "1000%"),
                            ".full" = list(padding = "0px",
                                           margin = "0px",
@@ -67,7 +69,12 @@ style_extra_css(css = list(".todo" = list(color = "#17C25B"),
                            ".vertical" = list(`writing-mode` = "vertical-rl",
                                               `text-orientation` = "mixed"),
                            ".blurry" = list(color = "transparent",
-                                            `text-shadow` = "0 0 5px rgba(0,0,0,0.5)")),
+                                            `text-shadow` = "0 0 5px rgba(0,0,0,0.5)"),
+                           ".blurry2" = list(filter = "blur(2px)",
+                                             `-webkit-filter` = "blur(2px)"),
+                           ".curly" = list("font-family" = "Parisienne"),
+                           ".white" = list(color = "#FFFFFF")
+                    )
                 )
 ```
 
@@ -86,28 +93,14 @@ knitr::include_graphics("images/qr_slides.svg")
 .pull-right[![CC0](https://mirrors.creativecommons.org/presskit/buttons/88x31/svg/cc-zero.svg)]
 
 ---
-class: center, middle
-
-# Why does preregistration increase the persuasiveness of evidence?
-
-## A Bayesian rationalization
-
-### Aaron Peikert
-
-### 23rd Research Colloquium  | 09.11.2022
-
----
 class: inverse, center, middle
 
-# Why do we preregister?
+# Trust in Science
 
-???
+---
+class: center, middle
 
-An objective for preregistration.
-If commiting to specific research question and data analysis before gathering data is to be a useful tool, we must know to what end we employ it.
-
-If you are uncertain about why you should preregister, I hope to provide some clarity.
-If you think you know why you should preregister, I hope to sow some doubt.
+.enormous[?]
 
 ---
 
@@ -167,9 +160,188 @@ crisis_plot /
 
 .small.right[Baker, M. 1,500 scientists lift the lid on reproducibility. *Nature* 533, 452–454 (2016). https://doi.org/10.1038/533452a]
 
-???
+--
 
-The simple answer is that we preregister because we think it is a remedy against the replication crisis.
+.small.right[***They call it "reproducibility" and fail to publish the raw data.**]
+
+---
+class: inverse, center, middle
+
+# Transparency in Science*
+
+*Statisticians' Edition
+
+---
+class: center, middle
+
+# World → Theory
+
+---
+class: center, middle
+
+# World ← Theory
+
+---
+class: center, middle
+
+# World ↔ Theory
+
+--
+
+.curly.white.large[It's a match!]
+
+---
+class: center, middle, inverse
+
+# Principled Approach
+
+---
+class: center, middle
+
+# $L(\text{Theory}, \text{Data})$
+
+---
+class: center, middle
+
+# ѴαЯi€𝜏y
+
+### $L(\text{Theory}, \text{Data})$
+
+---
+class: center, middle
+
+$$L_1(\text{Theory}, \text{Data})$$
+$$\vdots$$
+$$L_\infty(\text{Theory}, \text{Data})$$
+
+---
+class: center, middle, inverse
+
+# Statistical Models
+
+--
+
+= automated induction
+
+---
+class: center, middle
+
+# Theory
+
+---
+class: center, middle
+
+# T█e█ry
+
+---
+class: middle
+
+$$Model(\text{Theory})$$
+---
+class: middle
+
+$$Model(\text{Theory}, \text{Data})$$
+
+---
+
+### How statisticians judge a model:
+
+Sampling the world and compare:
+
+$$
+L(\text{Model}(\text{Data}), \text{Data}) + \mathcal{C}(\text{Model})
+$$
+e.g.: Adjusted R², Stein's Unbiased Risk Estimator, Information Criteria, etc.
+
+.center[
+
+**We account for peeking at the data**
+
+]
+
+---
+
+### Researcher have a harder job:
+
+Sampling the world and compare:
+
+$$
+L(\text{Model}(\text{Data}), \text{Data}) + \mathcal{C}(\text{Model}) + \mathcal{C}(\text{Human})
+$$
+.center[
+
+**We must account for the models and humans ability to make sense of any data.**
+
+]
+
+---
+class: center, middle
+
+.left[What happens if]
+
+.center[
+
+$\mathcal{C}(\text{Model})$ or $\mathcal{C}(\text{Human})$
+
+]
+
+.right[is unknown?]
+
+---
+class: center, middle, inverse
+
+# .blurry[Uncertainty]
+
+---
+
+The goal:
+
+.center[
+
+$L(\text{Model}(\text{Data}), \text{Data}) + \mathcal{C}(\text{Model}) + \mathcal{C}(\text{Human})$
+
+]
+
+--
+
+The enemy:
+
+.pull-left[
+
+.blurry2[$$\mathcal{C}(\text{Model})$$]
+
+]
+
+.pull-right[
+
+.blurry2[$$\mathcal{C}(\text{Human})$$]
+
+]
+
+--
+
+The solution:
+
+.pull-left.center[
+
+### Computational Reproducibility
+
+]
+
+.pull-right.center[
+
+### Preregistration
+
+]
+
+---
+class: center, middle
+
+.large[**Preregistration**]
+
+.large[~~**Computational Reproducibility**~~]
+
+.tiny[Maybe not today.]
 
 ---
 class: inverse, center, middle
@@ -213,6 +385,79 @@ class: center
 ---
 class: center, middle
 
+# Consider three scenarios:
+
+---
+layout: true
+class: center, middle
+---
+
+.huge[1.]
+
+.large[You predict the outcome of a horse race correctly.]
+
+--
+
+.large[Great! You know something about horses.]
+
+---
+
+.huge[2.]
+
+.large[You tell me the outcome of a horse race after the race.]
+
+--
+
+.large[Great! You know something about reading a chart.]
+
+---
+
+.huge[3.]
+
+.large[You predict that you can tell me the outcome after the race.]
+
+--
+
+.large[Great! You know that you can preregister harking.]
+
+---
+layout: false
+class: center
+
+# Preregistration separates?
+
+.pull-left.center[
+
+# confirmatory
+
+]
+
+.pull-right.center[
+
+# exploratory
+
+]
+
+.pull-left.center[
+
+# ≈
+
+# preregistered
+
+]
+
+.pull-right.center[
+
+
+# ≈
+
+# not preregistered
+
+]
+
+---
+class: center, middle
+
 ## Obvious problems:
 
 1. not a principled rational
@@ -220,96 +465,31 @@ class: center, middle
 3. what about changes after the preregistration
 
 ---
-class: inverse, center, middle
+class: center, middle
 
-# A Formal Objective*
+.left[I propose that, reduction in ]
 
-*Statisticians' Edition
+.large.blurry2[Uncertainty]
 
----
-
-### How we judge a model:
-
-Sampling the world and compare:
-
-$$
-L(\text{Model}(\text{Train}), \text{Train}) + \mathcal{C}(\text{Model})
-$$
-e.g.: Adjusted R², Stein's Unbiased Risk Estimator, Information Criteria, etc.
-
-.center[
-
-**We account for peeking at the data**
-
-]
-
----
-
-### Alternatively:
-
-The statistical complexity of some models is hard to estimate.
-
-Find a situation, were $\mathcal{C}(\text{Model}) = 0$
-
---
-
-$$
-L(\text{Model}(\text{Train, Test}), \text{Test})
-$$
-.center[
-
-**There is no peeking to account for.**
-
-]
-
-
----
-
-### How we judge a theory:
-
-$$L(\text{Theory}, \text{Train})$$
---
-
-We often replace a theory by a model:
-
-$$
-L(\text{Model}(\text{Theory,Train}), \text{Train}) + \mathcal{C}(\text{Model})
-$$
---
-
-Who are we kidding?
-
-$$
-L(\text{Model}(\text{Theory,Train}), \text{Train}) + \mathcal{C}(\text{Model}) + \mathcal{C}(\text{Human})
-$$
----
-## $\mathcal{C}(\text{Human})$
-
-The statistical complexity of humans is hard to estimate.
-
-Find a situation, were $\mathcal{C}(\text{Human}) = 0$
-
---
-
-.center[
-# Preregistration
-]
-
----
-class: center, middle, inverse
-
-# .blurry[Uncertainty]
+.right[warrants preregistration.]
 
 ---
 class: center, middle
 
-
-# $\infty$ loss functions
+## Let's be more specific
 
 ---
-class: center, middle, inverse
+class: center, middle
 
-# Practice
+#### My favorite $L$:
+
+$$
+P(H|E) = \frac{P(H)P(E|H)}{P(H)P(E|H) + P(¬H)P(E|¬H)}
+$$
+
+--
+
+But this holds for any $L$ that satisfies the "statistical relevancy condition", i.e., decreases if $P(E|H) \gg P(E|¬H)$, ceteris paribus.
 
 ---
 class: center, middle
@@ -346,6 +526,47 @@ layout: true
 .large[**Preregistrations**] reduce .large[**uncertainty**] about .large[**theoretical risk**].
 
 ---
+class: center
+
+Different goals:
+
+.pull-left[
+
+## Preregistration
+
+]
+
+.pull-right[
+
+## Confirmation
+
+]
+
+---
+class: center, middle
+
+.pull-left[
+
+It makes a difference what you
+
+## Preregister:
+
+]
+
+--
+
+.pull-right[
+
+### Results (= confirmatory)
+
+### ≠
+
+### Inductive Process (≠ confirmatory)
+
+]
+
+
+---
 
 # Can I explore the data?
 
@@ -379,11 +600,9 @@ template: theoretical-risk-plot2
 template: theoretical-risk-plot2
 
 ---
-template: qrcode
+class: center, middle, inverse
 
----
-
-### One further idea
+# Ideal Preregistration
 
 ---
 
