--- a/references.bib
+++ b/references.bib
@@ -293,3 +293,20 @@
   doi = {10.1207/s15327965pli0102_9},
   annotation = {\_eprint: https://doi.org/10.1207/s15327965pli0102\_9}
 }
+
+@article{meehlAppraisingAmendingTheories1990,
+  title = {Appraising and {{Amending Theories}}: {{The Strategy}} of {{Lakatosian Defense}} and {{Two Principles}} That {{Warrant It}}},
+  shorttitle = {Appraising and {{Amending Theories}}},
+  author = {Meehl, Paul E.},
+  year = {1990},
+  month = apr,
+  journal = {Psychological Inquiry},
+  volume = {1},
+  number = {2},
+  pages = {108--141},
+  publisher = {{Routledge}},
+  issn = {1047-840X},
+  doi = {10.1207/s15327965pli0102_1},
+  annotation = {\_eprint: https://doi.org/10.1207/s15327965pli0102\_1}
+}
+
